--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
 <html lang="fi">
 <!--<![endif]-->
   <head>
-    <title>UNCTAD 2022-edar report</title>
+    <title>UNCTAD 2022-wcp</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <style>
