--- a/index.html
+++ b/index.html
@@ -1,26 +1,5 @@
-<!DOCTYPE html>
-<!--[if lt IE 7 ]> <html lang="fi" class="ie ie6"> <![endif]-->
-<!--[if IE 7 ]> <html lang="fi" class="ie ie7"> <![endif]-->
-<!--[if IE 8 ]> <html lang="fi" class="ie ie8"> <![endif]-->
-<!--[if IE 9 ]> <html lang="fi" class="ie ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-<html lang="fi">
-<!--<![endif]-->
-  <head>
-    <title>UNCTAD 2022-wcp</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style>
-      html,
+<!doctype html><!--[if lt IE 7 ]> <html lang="fi" class="ie ie6"> <![endif]--><!--[if IE 7 ]> <html lang="fi" class="ie ie7"> <![endif]--><!--[if IE 8 ]> <html lang="fi" class="ie ie8"> <![endif]--><!--[if IE 9 ]> <html lang="fi" class="ie ie9"> <![endif]--><!--[if (gt IE 9)|!(IE)]><!--><html lang="fi"><!--<![endif]--><head><title>UNCTAD 2022-wcp</title><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/><style>html,
       body {
         margin: 0;
         padding: 0;
-      }
-    </style>
-    <link rel="shortcut icon" href="favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="css/styles.min.css" rel="stylesheet"><link href="fonts.css" rel="stylesheet"></head>
-  <body>
-    <div id="app-root"></div>
-  <script type="text/javascript" src="js/script.min.js"></script></body>
-</html>
+      }</style><link rel="shortcut icon" href="favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><script defer="defer" src="2022-wcp.min.js"></script><link href="2022-wcp.min.css" rel="stylesheet"></head><body><div id="app-root-2022-wcp"></div></body></html>
