--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,9 +18,9 @@
       }
     </style>
     <link rel="shortcut icon" href="favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="src/font/fonts.css" rel="stylesheet">
   </head>
   <body>
-    <div id="app-root"></div>
+    <div id="app-root-2022-wcp"></div>
   </body>
 </html>
