--- a/public/index.html
+++ b/public/index.html
@@ -2,4 +2,4 @@
       body {
         margin: 0;
         padding: 0;
-      }</style><link rel="shortcut icon" href="favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><script defer="defer" src="2022-wcp.min.js"></script><link href="2022-wcp.min.css" rel="stylesheet"></head><body><div id="app-root-2022-wcp"></div></body></html>
+      }</style><link rel="shortcut icon" href="favicon.png"/><link href="src/font/fonts.css" rel="stylesheet"><script defer="defer" src="2022-wcp.min.js"></script><link href="2022-wcp.min.css" rel="stylesheet"></head><body><div id="app-root-2022-wcp"></div></body></html>
