Updated webpack scripts

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,7 @@
       }
     </style>
     <link rel="shortcut icon" href="favicon.png" />
-    <link href="src/font/fonts.css" rel="stylesheet">
+    <link href="font/fonts.css" rel="stylesheet">
   </head>
   <body>
     <div id="app-root-2022-wcp"></div>
