--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
       body {
         margin: 0;
         padding: 0;
-      }</style><link rel="shortcut icon" href="favicon.png"/><link href="font/fonts.css" rel="stylesheet"><script defer="defer" src="js/2022-wcp.min.js"></script><link href="css/2022-wcp.min.css" rel="stylesheet"></head><body><div id="app-root-2022-wcp"></div></body></html>
+      }</style><link href="font/fonts.css" rel="stylesheet"><link rel="shortcut icon" href="favicon.png"/><script defer="defer" src="js/2022-wcp.min.js"></script><link href="css/2022-wcp.min.css" rel="stylesheet"></head><body><div id="app-root-2022-wcp"></div></body></html>
